solving a lot of problems
