# src/app/api/docs/swagger.yaml
@@ -19,6 +19,33 @@ definitions:
       terminated_at:
         type: string
     type: object
+  response.ArtistLowDTO:
+    properties:
+      country_id:
+        type: string
+      description:
+        type: string
+      founded_at:
+        type: string
+      id:
+        type: string
+      members:
+        items:
+          $ref: '#/definitions/response.ArtistDTO'
+        type: array
+      name:
+        type: string
+      picture_url:
+        type: string
+      record_company_id:
+        type: string
+      spotify_url:
+        type: string
+      super_artist_id:
+        type: string
+      terminated_at:
+        type: string
+    type: object
   response.ErrorMessage:
     properties:
       duplicated_fields:
@@ -105,7 +132,7 @@ paths:
       description: Rota que permite que se busque as informações de um artista
       operationId: GetArtistInformation
       parameters:
-      - default: cfd8b073-a303-4886-836a-f249e88be9bc
+      - default: a6d6488b-6ed0-4d41-9c55-4e899fdd7e47
         description: ID do artista.
         in: path
         name: artistID
@@ -118,7 +145,7 @@ paths:
           description: Requisição realizada com sucesso.
           schema:
             items:
-              $ref: '#/definitions/response.ArtistDTO'
+              $ref: '#/definitions/response.ArtistLowDTO'
             type: array
         "401":
           description: Usuário não autorizado.
